# ner

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: benchmark_conll.py
src/ner_service/: config.py  config_store.py  main.py  offsets.py  schema_builder.py  schemas.py  service.py
src/ner_service/providers/: base.py  cerebras.py  registry.py
tests/: conftest.py  test_cerebras_provider.py  test_http_contract.py  test_integration_cerebras.py  test_offsets.py  test_request_validation.py  test_schema_builder.py  test_service.py
tests/data/: samples.jsonl
